k8s-manifests/overlays/dev/superapp/encryption/patch/patch.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scurity-encryption
spec:
  replicas: 1
  template:
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
      - name: scurity-encryption
        image: harbor.cbe.com.et/cbe-superapp/scurity-encryption-dev
        imagePullPolicy: Always
