k8s-manifests/overlays/dev/superapp/encryption/patch/route-patch.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: scurity-encryption-route

spec:
  path: /api/v1/cbesuperapp/encryption
  to:
    name: scurity-encryption-dev
    weight: 100
    kind: Service
  host: deverpsuperapp.cbe.com.et
  port:
    targetPort: 8069
